# quantacore-sdk

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  quantacore-sdk.sln  setup-quantacore-sdk.ps1
.github/workflows/: codeql.yml
bindings/c/: CMakeLists.txt  README.md  basic.c  build_and_test.bat  build_and_test.ps1  quac100.pc.in  quac100Config.cmake.in
bindings/c++/: C++DISTRIBUTION.md  CMakeLists.txt  README.md
bindings/c++/cmake/: quac100ppConfig.cmake.in
bindings/c++/examples/: basic_example.cpp  hash_example.cpp  kem_example.cpp  random_example.cpp  sign_example.cpp
bindings/c++/include/quac100/: device.hpp  exception.hpp  hash.hpp  kem.hpp  keys.hpp  quac100.hpp  random.hpp  sign.hpp  types.hpp  utils.hpp
bindings/c++/src/: device.cpp  hash.cpp  kem.cpp  keys.cpp  quac100.cpp  random.cpp  sign.cpp  utils.cpp
bindings/c++/tests/: test_quac100pp.cpp
bindings/c/examples/: hash_example.c  kem_example.c  random_example.c  sign_example.c
bindings/c/include/quac100/: sign.h
bindings/c/release/quac100-1.0.0-windows-x64/: README.md
bindings/c/release/quac100-1.0.0-windows-x64/include/quac100/: device.h  hash.h  kem.h  keys.h  quac100.h  random.h  types.h  utils.h
bindings/c/src/: device.c  hal.c  hash.c  internal.h  kem.c  keys.c  quac100.c  random.c  sign.c  simple_test.c  utils.c
bindings/c/tests/: test_quac100.c
bindings/csharp/: Basicusage.cs  Device.cs  Exceptions.cs  Kem.cs  NativeMethods.cs  Quac100.csproj  Quac100Context.cs  Random.cs  Sign.cs  Types.cs
bindings/go/: LICENSE  README.md  cgo_bridge.go  device.go  errors.go  go.mod  kem.go  quac100.go  random.go  types.go
bindings/java/: LIBRARY_INTEGRATION.md  README.md  build-native.bat  build-native.sh  pom.xml
bindings/java/native/: CMakeLists.txt  quac100_jni.c
bindings/nodejs/: .gitignore  .npmignore  LICENSE  README.md  jest.config.js  package-lock.json  package.json  tsaconfig.json  tsconfig.json
bindings/python/: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
bindings/rust/: .gitignore  Cargo.toml  README.md  build.rs
bindings/rust/examples/: basic.rs  hash.rs  kem.rs  random.rs  sign.rs
bindings/rust/src/: device.rs  error.rs  ffi.rs  hash.rs  kem.rs  keys.rs  lib.rs  library.rs  random.rs  sign.rs  types.rs  utils.rs
bindings/rust/tests/: integration.rs  test_types.rs  test_utils.rs
cmake/: FindQuac100.cmake  Quac100Config.cmake.in  quac100_version.h.in
docs/api/: README.md
docs/guides/: cloudflare_integration.md  installation.md  programming_guide.md  quick_start.md  simulator_guide.md
docs/reference/: README.md
drivers/linux/: README.md
drivers/windows/: README.md  quac100.sln  setup_windows_driver.ps1
examples/: BIDNINGS_PUBLISHING_GUIDE.md
examples/c/: Makefile  dilithium_sign.c  hello_quac.c  kyber_demo.c  tls_server.c
examples/go/: README.md  concurrent.go  kem_demo.go  sign_demo.go
examples/java/: README.md  (+4 more)
examples/rust/: Cargo.toml  hello_quac.rs  kem_demo.rs  sign_demo.rs
include/: quac100.h  quac100_async.h  quac100_batch.h  quac100_diag.h  quac100_error.h  quac100_kem.h  quac100_random.h  quac100_sign.h  quac100_types.h
integrations/boringssl/: BUILD.gn  CMakeLists.txt  Makefile  README.md  bench_quac100_boringssl.c  quac100_asn1.c  quac100_boringssl.c  quac100_boringssl.def  quac100_boringssl.h  quac100_boringssl_internal.h  quac100_evp.c  quac100_rand.c  quac100_sig.c  quac100_tls.c  test_quac100_boringssl.c
integrations/boringssl/examples/: pqc_client.c  pqc_server.c
integrations/boringssl/tools/: quac100_certgen.c  quac100_keygen.c
integrations/openssl/: CMakeLists.txt  Makefile  README.md  bench_provider.c  openssl.cnf.example  quac100.map  quac100_decoder.c  quac100_encoder.c  quac100_kat.c  quac100_kem_alg.c  quac100_keyexch.c  quac100_openssl.def  quac100_provider.c  quac100_provider.h  quac100_provider_internal.h  quac100_rand.c  quac100_sig_alg.c  quac100_store.c  test_provider.c  test_provider.sh
integrations/openssl/examples/: pqc_kem.c  pqc_sign.c
integrations/openssl/tools/: quac100_req.c
integrations/pkcs11/: CMakeLists.txt  Makefile  README.md  bench_quac100_pkcs11.c  example_quac100_pkcs11.c  quac100.module  quac100_pkcs11-config.cmake.in  quac100_pkcs11.c  quac100_pkcs11.conf  quac100_pkcs11.def  quac100_pkcs11.h  quac100_pkcs11_crypto.c  quac100_pkcs11_internal.h  quac100_pkcs11_object.c  quac100_pkcs11_session.c  quac100_pkcs11_slot.c  quac100_pkcs11_utils.h  quac100_sunpkcs11.cfg  quc100_nssdb.conf  test_pkcs11.sh
integrations/pkcs11/examples/: p11_hybrid.c  p11_kem.c  p11_multithread.c  p11_random.c  p11_sign_verify.c
integrations/pkcs11/tools/: quac100_p11keytool.c  quac100_p11tool.c
integrations/tls/: CMakeLists.txt  Makefile  README.md  quac_tls.c  quac_tls.def  quac_tls.h  quac_tls_internal.h  quac_tls_pqc.c
integrations/tls/cmake/: quac_tls-config.cmake.in
integrations/tls/envoy/: README.md  envoy-pqc.yaml  quac_envoy_filter.cc
integrations/tls/examples/: example_tls_client.c
integrations/tls/haproxy/: README.md  haproxy-pqc.cfg  quac_haproxy_engine.c
integrations/tls/nginx/: README.md  config  nginx-pqc.conf  ngx_http_quac_module.c
integrations/tls/tests/: bench_quac_tls.c  test_quac_tls.c
integrations/tls/tools/: quac_tls_keygen.c
tools/bindgen/: CMakeLists.txt  README.md
tools/bindgen/src/: gen_csharp.c  gen_go.c  gen_java.c  gen_nodejs.c  gen_python.c  gen_rust.c  generator.c  generator.h  main.c  parser.c  types.c  types.h
tools/bindgen/tests/: test_parser.c
tools/quac100-bench/: CMakeLists.txt  README.md
tools/quac100-bench/src/: algorithms.c  algorithms.h  benchmark.c  benchmark.h  main.c  output.c  output.h  stats.c  stats.h
tools/quac100-cli/: CMakeLists.txt  README.md
tools/quac100-cli/src/: commands.c  commands.h  device.c  device.h  kem.c  keys.c  main.c  random.c  shell.c  sign.c  utils.c  utils.h
tools/quac100-diag/: CMakeLists.txt  README.md
tools/quac100-diag/src/: diag.c  diag.h  hardware.c  hardware.h  main.c  report.c  report.h  tests.c  tests.h  utils.c  utils.h
(+260 files in other folders)
