[package]
name = "quantacore-sdk"
version = "1.0.1"
edition = "2021"
authors = ["Dyber, Inc. <support@dyber.org>"]
description = "Rust bindings for the QUAC 100 Post-Quantum Cryptographic Accelerator"
documentation = "https://docs.dyber.org/quac100/rust"
homepage = "https://dyber.org"
repository = "https://github.com/dyber-pqc/quantacore-sdk"
license = "LicenseRef-Proprietary"
readme = "README.md"
keywords = ["cryptography", "post-quantum", "pqc", "kyber", "hsm"]
categories = ["cryptography", "hardware-support", "api-bindings"]
rust-version = "1.70"

[lib]
name = "quantacore"
crate-type = ["lib"]

[features]
default = ["std"]
std = []
# Enable software fallback when hardware unavailable
software-fallback = []
# Enable FIPS 140-3 compliant mode
fips = []
# Enable additional debug output
debug = []

[dependencies]
# Error handling
thiserror = "1.0"

# Secure memory zeroing
zeroize = { version = "1.7", features = ["derive"] }

# Bitflags for flag enums
bitflags = "2.4"

# Hex encoding/decoding
hex = "0.4"

# Base64 encoding/decoding
base64 = "0.21"

# Lazy static for library state
once_cell = "1.19"

# Parking lot for better mutexes
parking_lot = "0.12"

# Logging (optional)
log = { version = "0.4", optional = true }

[dev-dependencies]
# Testing utilities
criterion = "0.5"

[build-dependencies]
# For finding native library
pkg-config = "0.3"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "kem"
path = "examples/kem.rs"

[[example]]
name = "sign"
path = "examples/sign.rs"

[[example]]
name = "hash"
path = "examples/hash.rs"

[[example]]
name = "random"
path = "examples/random.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
